fix heading and nav left spacing

--- a/Bookmarks Page/_bookmarksPage.scss
+++ b/Bookmarks Page/_bookmarksPage.scss
@@ -40,6 +40,7 @@ div.header-text {
     @extend %bar-btn;
     border: none;
     cursor: default;
+    padding-left: 0.6em;
 }
 
 .gear-icon {
@@ -58,6 +59,7 @@ nav {
 
 nav div {
     @extend %bar-btn;
+    padding-left: 0.6em;
 }
 
 .back {
